--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM adoptopenjdk/openjdk11
 CMD ["./mvnw", "clean", "package"]
 ARG JAR_FILE_PATH=target/*.jar
+CMD ls
+CMD cd ${JAR_FILE_PATH}
+CMD ls
 COPY ${JAR_FILE_PATH} backend-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java", "-jar", "backend-0.0.1-SNAPSHOT.jar"]
