--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,8 +1,6 @@
 on:
   push:
-    branches: [ broker ]
-  pull_request:
-    branches: [ broker ]
+    branches: [ backend ]
 name: Deploy to Amazon ECS
 
 jobs:
