--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM adoptopenjdk/openjdk11
+WORKDIR ./backend
 CMD ["./mvnw", "clean", "package"]
 ARG JAR_FILE_PATH=target/*.jar
-RUN ["pwd"]
 COPY ${JAR_FILE_PATH} backend-0.0.1-SNAPSHOT.jar
 ENTRYPOINT ["java", "-jar", "backend-0.0.1-SNAPSHOT.jar"]
