--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -46,6 +46,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: reactei
-          cluster: demo
+          service: hanja-service
+          cluster: hanju
           wait-for-service-stability: true
