feat: 배포 테스트

--- a/.github/workflows/apiServer_deployment.yml
+++ b/.github/workflows/apiServer_deployment.yml
@@ -50,3 +50,7 @@ jobs:
           service: backend-service
           cluster: sol-in-one
           wait-for-service-stability: true
+
+      - name: Force deployment
+        run: |
+          aws ecs update-service --cluster ff_prod --service ff_prod --force-new-deployment
