--- a/.github/workflows/apiServer_deployment.yml
+++ b/.github/workflows/apiServer_deployment.yml
@@ -53,4 +53,4 @@ jobs:
 
       - name: Force deployment
         run: |
-          aws ecs update-service --cluster ff_prod --service ff_prod --force-new-deployment
+          aws ecs update-service --cluster sol-in-one --service backend-service --force-new-deployment
